php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68163 yet another: signal 6 (SIGABRT - core dumped)
Submitted: 2014-10-06 05:04 UTC Modified: -
From: pegasus at vaultwiki dot org Assigned:
Status: Closed Package: Reproducible crash
PHP Version: master-Git-2014-10-06 (Git) OS: Centos 6 64-bit
Private report: No CVE-ID: None
 [2014-10-06 05:04 UTC] pegasus at vaultwiki dot org
Description:
------------
Like the last SIGABRT, don't know what part of my script causes this yet, but here's the backtrace to get you started:

#0  0x0000003f3e232635 in raise () from /lib64/libc.so.6
#1  0x0000003f3e233e15 in abort () from /lib64/libc.so.6
#2  0x0000003f3e22b75e in __assert_fail_base () from /lib64/libc.so.6
#3  0x0000003f3e22b820 in __assert_fail () from /lib64/libc.so.6
#4  0x00000000009822d6 in _convert_to_string (op=0x7fff33107a70,
    __zend_filename=0xf611e8 "/root/php-src/Zend/zend_object_handlers.c",
    __zend_lineno=479) at /root/php-src/Zend/zend_operators.c:596
#5  0x00000000009cd660 in zend_std_read_property (object=0x7ff4b5835530,
    member=0x7ff4b5835620, type=0, cache_slot=0x0, rv=0x7ff4b5836070)
    at /root/php-src/Zend/zend_object_handlers.c:479
#6  0x0000000000a35a00 in ZEND_FETCH_OBJ_R_SPEC_UNUSED_CV_HANDLER (
    execute_data=0x7ff4b5835500) at /root/php-src/Zend/zend_vm_execute.h:32522
#7  0x00000000009e026d in execute_ex (execute_data=0x7ff4b5835500)
    at /root/php-src/Zend/zend_vm_execute.h:352
#8  0x00000000009e03c8 in zend_execute (op_array=0x7ff4b587a000,
    return_value=0x0) at /root/php-src/Zend/zend_vm_execute.h:381
#9  0x0000000000992e14 in zend_execute_scripts (type=8, retval=0x0,
    file_count=3) at /root/php-src/Zend/zend.c:1286
#10 0x00000000009050dc in php_execute_script (primary_file=0x7fff3310c200)
    at /root/php-src/main/main.c:2560
#11 0x0000000000a63993 in main (argc=8, argv=0x7fff3310c428)
    at /root/php-src/sapi/fpm/fpm/fpm_main.c:1948

Expected result:
----------------
No SIGABRT

Actual result:
--------------
SIGABRT core dumped

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-10-06 10:10 UTC] nikic@php.net
This probably comes from doing something like $this->$ref, where $ref is a reference. I'll fix it later.
 [2014-10-06 16:59 UTC] nikic@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03c726d7281feb0c08c4ea37e48f69ded71a410a
Log: Fix bug #68163
 [2014-10-06 16:59 UTC] nikic@php.net
-Status: Open +Status: Closed
 [2014-10-07 07:10 UTC] ab@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03c726d7281feb0c08c4ea37e48f69ded71a410a
Log: Fix bug #68163
 [2016-07-20 11:40 UTC] davey@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03c726d7281feb0c08c4ea37e48f69ded71a410a
Log: Fix bug #68163
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon May 04 07:00:02 2026 UTC